corpus/forms.txt
============================================
Arithmetic
============================================

(+ 2 2)
(+ x x)

(* 2 2)
(* x x)

(/ 2 2)
(/ x x)

(- 2 2)
(- x x)


---

(source_file
  (function_call (function_symbol) (number) (number))
  (function_call (function_symbol) (symbol) (symbol))
  (function_call (function_symbol) (number) (number))
  (function_call (function_symbol) (symbol) (symbol))
  (function_call (function_symbol) (number) (number))
  (function_call (function_symbol) (symbol) (symbol))
  (function_call (function_symbol) (number) (number))
  (function_call (function_symbol) (symbol) (symbol))
  )
